# otail

./: .gitignore  BACKLOG  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  JOURNAL  LICENSE.txt  README.md  log.txt
.claude/: settings.local.json
docs/: otail-architecture.excalidraw
examples/: survey.rs  tail.rs  tui.rs
src/: backing_file.rs  colour_spec.rs  common.rs  config.rs  console_view.rs  ffile.rs  filter_spec.rs  ifile.rs  lib.rs  main.rs  panic.rs  reader.rs  sfile.rs  tui.rs  tui_view.rs  view.rs
