[package]
name = "rtail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
env_logger = "0.11.5"
futures = "0.3.31"
futures-timer = "3.0.3"
log = "0.4.22"
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
ratatui = "0.28.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
