[package]
name = "otail"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
env_logger = "0.11.8"
flexi_logger = "0.29.8"
fmtsize = "0.1.2"
futures = "0.3.31"
futures-timer = "3.0.3"
lazy_static = "1.5.0"
log = "0.4.27"
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
num-format = "0.4.4"
ratatui = "0.29"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tui-input = "0.11.1"

[dev-dependencies]
mockall = "0.13.1"

